--- a/Website For Hackathon/index.html
+++ b/Website For Hackathon/index.html
@@ -38,29 +38,22 @@
 
             <div class='card1 card'>
                 <div class='brain'>
+                    <a href="#">
+                        <h2> Diagnose Brain Cancer</h2>
+                    </a>
                 </div>
 
                 <!-- This Submission si for Brain -->
-                <div class='submission-form'>
-                    <form action="/action_page.php">
-                        <label for="brain">Select image:</label>
-                        <input type="file" id="brain" name="brain" accept="image/*">
-                        <input type="submit">
-                    </form>
-                </div>
+
 
 
             </div>
             <!-- This submission is for Tuberculosis -->
             <div class='card2 card'>
                 <div class='tuberculosis'>
-                </div>
-                <div class='submission-form'>
-                    <form action="/action_page.php">
-                        <label for="tuberculosis">Select image:</label>
-                        <input type="file" id="tuberculosis" name="tuberculosis" accept="image/*">
-                        <input type="submit">
-                    </form>
+                    <a href="#">
+                        <h2> Diagnose Tuberculosis</h2>
+                    </a>
                 </div>
 
 
@@ -68,20 +61,81 @@
             <!-- Thus Submission is for Cancer -->
             <div class='card3 card'>
                 <div class='cancer'>
-                </div>
-                <div class='submission-form'>
-                    <form action="/action_page.php">
-                        <label for="cancer">Select image:</label>
-                        <input type="file" id="cancer" name="cancer" accept="image/*">
-                        <input type="submit">
-                    </form>
+                    <a href="#">
+                        <h2> Diagnose Cancer</h2>
+                    </a>
                 </div>
 
 
             </div>
 
         </section>
-        <!-- Your Business Finishes here. I will add other things with time -->
+
+
+        <section id="submission-section">
+
+            <div id="submit-illness">
+                <div>
+
+                    <h2> Three Steps Solutions </h2>
+                    <ul>
+                        <li> Choose a Problem to Be Diagnosed </li>
+                        <li> Upload the Relevant Image </li>
+                        <li> Submit </li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <div id='submission-form'>
+                <form action="/action_page.php" id="uploadFile">
+                    <div id='first'>
+                        <label for="fname">First name:</label><br>
+                        <input type="text" id="fname" name="fname" value="John">
+                    </div>
+
+                    <div id='second'>
+                        <label for="lname">Last name:</label><br>
+                        <input type="text" id="lname" name="lname" value="Doe">
+                    </div>
+
+                    <div id='third'>
+                        <label for="number">Phone Number:</label><br>
+                        <input type="tel" id="number" name="number" value="Doe">
+                    </div>
+                    <div id='fourth'>
+                        <label for="address">Address:</label><br>
+                        <input type="text" id="address" name="address" value="Doe">
+                    </div>
+                    <div id='fifth'>
+                        <label for="illness">Choose Illness :</label>
+
+                        <select name="illness" id="illness" required>
+                            <option value="Tuberculosis">Tuberculosis</option>
+                            <option value="Cancer">Cancer</option>
+                            <option value="Brain">Brain</option>
+                        </select>
+                    </div>
+
+                    <div id='sixth'>
+                        <input type="file" id="myFile" name="filename" required>
+                    </div>
+                    <div id='seventh'>
+                        <input type="submit" value="Submit">
+
+                    </div>
+
+
+                </form>
+
+
+
+            </div>
+
+
+
+        </section>
+
     </body>
 
 </html>
