--- a/Website For Hackathon/index.html
+++ b/Website For Hackathon/index.html
@@ -22,14 +22,16 @@
             <div class='first_image'>
                 <img src='ai-image.png'>
             </div>
-            <div>
-                <h2> Welcome To AiDOC</h2>
-                <p> Revolutionizing healthcare with cutting-edge image recognition technology</p>
+            <div class="text">
+                <h2>
+                    Welcome To <span> AiDOC</span>
+                </h2>
+                <p> Revolutionizing healthcare with image recognition technology</p>
             </div>
         </section>
 
 
-        <!-- Pallavi Here is the Section You Will be Interested in  -->
+        <!-- This is second Section  -->
         <section id='second-section'>
             <div class='heading'>
                 <h2> Our Services</h2>
@@ -38,40 +40,48 @@
 
             <div class='card1 card'>
                 <div class='brain'>
-                    <a href="#">
-                        <h2> Diagnose Brain Cancer</h2>
-                    </a>
-                </div>
 
-                <!-- This Submission si for Brain -->
+                </div>
+                <a href="#">
+                    <h2> Diagnose Brain Cancer</h2>
+                </a>
+
+
+                <!-- This Card is for Brain -->
 
 
 
             </div>
-            <!-- This submission is for Tuberculosis -->
+            <!-- This Card is for Tuberculosis -->
             <div class='card2 card'>
                 <div class='tuberculosis'>
-                    <a href="#">
-                        <h2> Diagnose Tuberculosis</h2>
-                    </a>
+
+
                 </div>
+                <a href="#">
+                    <h2> Diagnose Tuberculosis</h2>
+                </a>
+
 
 
             </div>
-            <!-- Thus Submission is for Cancer -->
+            <!-- Thus Card is for Cancer -->
             <div class='card3 card'>
                 <div class='cancer'>
-                    <a href="#">
-                        <h2> Diagnose Cancer</h2>
-                    </a>
+
+
                 </div>
+                <a href="#">
+                    <h2> Diagnose Cancer</h2>
+                </a>
+
 
 
             </div>
 
         </section>
 
-
+        <!-- This is the Section that Requires Backend -->
         <section id="submission-section">
 
             <div id="submit-illness">
@@ -79,9 +89,9 @@
 
                     <h2> Three Steps Solutions </h2>
                     <ul>
-                        <li> Choose a Problem to Be Diagnosed </li>
-                        <li> Upload the Relevant Image </li>
-                        <li> Submit </li>
+                        <li> 1. Choose a Problem to Be Diagnosed </li>
+                        <li> 2. Upload the Relevant Image </li>
+                        <li> 3. Submit </li>
                     </ul>
                 </div>
             </div>
@@ -90,21 +100,21 @@
             <div id='submission-form'>
                 <form action="/action_page.php" id="uploadFile">
                     <div id='first'>
-                        <label for="fname">First name:</label><br>
+                        <label for="fname">First name:</label>
                         <input type="text" id="fname" name="fname" value="John">
                     </div>
 
                     <div id='second'>
-                        <label for="lname">Last name:</label><br>
+                        <label for="lname">Last name:</label>
                         <input type="text" id="lname" name="lname" value="Doe">
                     </div>
 
                     <div id='third'>
-                        <label for="number">Phone Number:</label><br>
+                        <label for="number">Phone Number:</label>
                         <input type="tel" id="number" name="number" value="Doe">
                     </div>
                     <div id='fourth'>
-                        <label for="address">Address:</label><br>
+                        <label for="address">Address:</label>
                         <input type="text" id="address" name="address" value="Doe">
                     </div>
                     <div id='fifth'>
@@ -121,18 +131,23 @@
                         <input type="file" id="myFile" name="filename" required>
                     </div>
                     <div id='seventh'>
-                        <input type="submit" value="Submit">
+                        <input id='submit' type="submit" value="Submit">
 
                     </div>
 
 
                 </form>
-
+                <!-- ee6d4a -->
 
 
             </div>
 
 
+
+        </section>
+
+
+        <section id='about-us'>
 
         </section>
 
