--- a/Website For Hackathon/index.html
+++ b/Website For Hackathon/index.html
@@ -35,7 +35,7 @@
         <section id='second-section'>
             <div class='heading'>
                 <h2> Our Services</h2>
-                <p> Diagnose Tuberculosis, Pneumonia, and Cancer </p>
+                <p> Diagnose Various Types of Brain Tumor </p>
             </div>
 
             <div class='card1 card'>
@@ -43,7 +43,7 @@
 
                 </div>
                 <a href="#section-form">
-                    <h2> Diagnose Brain Tumor</h2>
+                    <h2> Meningioma</h2>
                 </a>
 
 
@@ -59,7 +59,7 @@
 
                 </div>
                 <a href="#section-form">
-                    <h2> Diagnose Tuberculosis</h2>
+                    <h2> Pituitory</h2>
                 </a>
 
 
@@ -72,7 +72,7 @@
 
                 </div>
                 <a href="#section-form">
-                    <h2> Diagnose Pneumonia</h2>
+                    <h2> Glioma</h2>
                 </a>
             </div>
 
@@ -120,19 +120,14 @@
                         <input type="text" id="address" name="address" value="">
                     </div>
                     <div id='fifth'>
-                        <label for="illness">Choose Illness :</label>
+                        <!-- <label for="submit">Choose Illness :</label> -->
 
-                        <select name="illness" id="illness" required>
-                            <option value="Tuberculosis">Tuberculosis</option>
-                            <!-- Value was Cancer, now it is Pneumonia -->
-                            <option value="pneumonia">Pneumonia</option>
-
-                            <option value="Brain">Brain tumor</option>
-                        </select>
+                        <input type="file" id="myFile" name="filename" required>
                     </div>
 
                     <div id='sixth'>
-                        <input type="file" id="myFile" name="filename" required>
+
+
                     </div>
                     <div id='seventh'>
                         <input id='submit' type="submit" value="Submit">
